src/test/NoIndexedAssignment/NoIndexedAssignment.expected
error: NoIndexedAssignment.panda:12:5: 'NoIndexedAssignment1' does not define the indexed assignment ([]:=) operator for [panda.core.Int8, panda.core.Int8]
error: NoIndexedAssignment.panda:14:8: 'NoIndexedAssignment2' does not define the indexed assignment ([]:=) operator for [panda.core.Int32, panda.core.Int8]
2 errors
