src/test/NoIndexedAssignment/NoIndexedAssignment.panda
class NoIndexedAssignment1 {
}

class NoIndexedAssignment2 {
    function [](index:Int):Int {
        return index
    }
}

method main() {
    var a := new NoIndexedAssignment1()
    a[5] := 8
    var b := new NoIndexedAssignment2()
    b[8] := 13
}